--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <main class="wrapping">
       <div class="form">
-        <input type="text" placeholder="Tarefa" />
-        <button>Adicionar</button>
+        <input id="tarefa" type="text" placeholder="Tarefa" />
+        <button class="addTarefa">Adicionar</button>
       </div>
 
       <section class="tasks">
         <ul>
           <li>
             trablahr as 1h
-            <button>
+            <button class="delete">
               <img
                 src="https://cdn-icons-png.flaticon.com/128/7192/7192784.png"
                 alt=""
@@ -38,5 +38,9 @@
         >Edivilhan</a
       >
     </footer>
+
+
+
+    <script src="script.js"></script>
   </body>
 </html>
