--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <section class="tasks">
-        <ul>
+        <ul class="lista">
           <li>
             trablahr as 1h
             <button class="delete">
